--- a/app/assets/stylesheets/public/chat_rooms.scss
+++ b/app/assets/stylesheets/public/chat_rooms.scss
@@ -20,7 +20,7 @@
   float: right;
 }
 .chat-hukidashi {
-  display: inline-block; /*コメントの文字数に合わせて可変*/
+  display: inline-block; 
   padding: 15px 20px;
   margin-left: 120px;
   margin-top: 8px;
