--- a/app/views/public/post_items/ranking.html.erb
+++ b/app/views/public/post_items/ranking.html.erb
@@ -1,54 +1,58 @@
+<html>
 <main>
-<div class="card">
-  <%= image_tag "ranking_background.png", class: "card-img1" %>
-</div>
+  <div class="card">
+    <%= image_tag "ranking_background.png", class: "card-img1" %>
+  </div>
 </main>
-<div class="row pt-3 ml-3">
-  <div class="col-md-6">
-     <h2><span>01</span>人気投稿作品ランキング</h2><br/>
+<body>
+  <div class="row pt-3 ml-3">
+    <div class="col-md-6">
+      <h2><span>01</span>人気投稿作品ランキング</h2><br/>
+    </div>
   </div>
-</div>
   <div class="d-flex justify-content-center mx-md-auto">
-<% if @weekly_ranks.present? %>
-  <% @favorite_ranks.each.with_index(1) do |post_item, i| %>
-  <i class="fas fa-crown crown">&nbsp;<h4 class="rank">第<%= i %>位</h4> </i>
-    <%= render partial: 'post_item', locals:{ post_item: post_item} %>
-  <% end %>
-<% else %>
-   <h1>Sorry, no posts yet.</h1>
-<% end %>
+    <% if @weekly_ranks.present? %>
+      <% @favorite_ranks.each.with_index(1) do |post_item, i| %>
+        <i class="fas fa-crown crown">&nbsp;<h4 class="rank">第<%= i %>位</h4> </i>
+        <%= render partial: 'post_item', locals:{ post_item: post_item} %>
+      <% end %>
+    <% else %>
+      <h1>Sorry, no posts yet.</h1>
+    <% end %>
   </div>
   <br/>
   <br/>
-<div class="row pt-3 ml-md-3">
-  <div class="col-md-6">
-     <h2><span>02</span>週間ランキング</h2><br/>
+  <div class="row pt-3 ml-md-3">
+    <div class="col-md-6">
+       <h2><span>02</span>週間ランキング</h2><br/>
+    </div>
   </div>
-</div>
-    <div class="d-flex justify-content-center">
-<% if @weekly_ranks.present? %>
-  <% @weekly_ranks.each.with_index(1) do |post_item, i| %>
-  <i class="fas fa-crown crown ">&nbsp;<h4 class="rank">第<%= i %>位</h4> </i>
-    <%= render partial: 'post_item', locals:{ post_item: post_item} %>
-  <% end %>
-<% else %>
-   <h1>Sorry, no posts yet week.</h1>
-<% end %>
-</div>
-<br/>
-<div class="row pt-3 ml-md-3">
-  <div class="col-md-6">
-     <h2><span>03</span>日別ランキング</h2><br/>
+  <div class="d-flex justify-content-center">
+    <% if @weekly_ranks.present? %>
+      <% @weekly_ranks.each.with_index(1) do |post_item, i| %>
+        <i class="fas fa-crown crown ">&nbsp;<h4 class="rank">第<%= i %>位</h4> </i>
+        <%= render partial: 'post_item', locals:{ post_item: post_item} %>
+      <% end %>
+    <% else %>
+      <h1>Sorry, no posts yet week.</h1>
+    <% end %>
   </div>
-</div>
-<div class="d-flex justify-content-center">
-<% if @daily_ranks.present? %>
-  <% @daily_ranks.each.with_index(1) do |post_item, i| %>
-  <i class="fas fa-crown crown">&nbsp;<h4 class="rank">第<%= i %>位</h4> </i>
-    <%= render partial: 'post_item', locals:{ post_item: post_item} %>
-  <% end %>
-<% else %>
-  <h1>Sorry, no posts yet today.</h1>
-<% end %>
-</div>
-<br/>
+  <br/>
+  <div class="row pt-3 ml-md-3">
+    <div class="col-md-6">
+       <h2><span>03</span>日別ランキング</h2><br/>
+    </div>
+  </div>
+  <div class="d-flex justify-content-center">
+    <% if @daily_ranks.present? %>
+      <% @daily_ranks.each.with_index(1) do |post_item, i| %>
+        <i class="fas fa-crown crown">&nbsp;<h4 class="rank">第<%= i %>位</h4> </i>
+        <%= render partial: 'post_item', locals:{ post_item: post_item} %>
+      <% end %>
+    <% else %>
+      <h1>Sorry, no posts yet today.</h1>
+    <% end %>
+  </div>
+  <br/>
+</body>
+</html>
