--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -97,15 +97,26 @@
 .card-body1{
     height: 300px;
     text-shadow: 0 5px 5px black;
-    background-image: image-url('post_items_background.PNG');
+    background-image: image-url("post_items_background.PNG");
     background-position: center center;
     background-size: cover;
 }
 .card-body2{
   text-shadow: 0 2px 2px white;
-  background-image: image-url('post_items_background.PNG');
+  background-image: image-url("post_items_background.PNG");
   background-position: center center;
   width: 100%;
   height: 100%;
   background-size: cover;
+}
+html , body{
+  background-image: image-url("index_background.jpg");
+  width: auto;
+  height: auto;
+  background-attachment: fixed;         /* 固定 */
+  background-size: cover;
+  background-position: center center;
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
 }
