--- a/app/assets/stylesheets/public/post_items.scss
+++ b/app/assets/stylesheets/public/post_items.scss
@@ -72,7 +72,7 @@
 }
 .card-body{
   text-shadow: 0 2px 2px white;
-  background-image: image-url('post_items_background.PNG2');
+  background-image: image-url("post_items_background.PNG2");
   background-position: center center;
   width: 100%;
   height: 100%;
@@ -140,17 +140,7 @@
 .genre{
   color: #FF9966;
 }
-html , body{
-  background-image: image-url('index_background.jpg');
-  width: auto;
-  height: auto;
-  background-attachment: fixed;         /* 固定 */
-  background-size: cover;
-  background-position: center center;   /* 縦横中央 */
-  min-height: 100%;
-  height: auto !important;
-  height: 100%;
-}
+
 .comment{
   color: #88FFFF;
 }
@@ -212,7 +202,6 @@ h2 span {
 .show-img{
     max-width: auto;
     max-height: 500px;
-    // object-fit: cover;
 }
 .comment{
   word-break: normal;
