--- a/app/views/public/users/unsubscribe.html.erb
+++ b/app/views/public/users/unsubscribe.html.erb
@@ -14,3 +14,4 @@
       <%= link_to "退会する", public_withdraw_path(@user), method: :patch, data: {confirm: "本当に退会しますか？"},  class:"btn btn-lg btn-warning mt-4 col-md-6"%>
     </div>
   </div>
+</div>
