--- a/app/views/public/users/registrations/new.html.erb
+++ b/app/views/public/users/registrations/new.html.erb
@@ -37,6 +37,6 @@
   </div></br/>
 <% end %>
 会員登録をお済みの方はこちらから
-<%= render "users/shared/links" %>
+<%= render "public/users/shared/links" %>
 </div>
 </div>
