--- a/app/assets/stylesheets/public/post_items.scss
+++ b/app/assets/stylesheets/public/post_items.scss
@@ -72,7 +72,7 @@
 }
 .card-body{
   text-shadow: 0 2px 2px white;
-  background-image: image-url("post_items_background.PNG2");
+  background-image: image-url("post_items_background.PNG");
   background-position: center center;
   width: 100%;
   height: 100%;
