--- a/app/views/public/users/passwords/new.html.erb
+++ b/app/views/public/users/passwords/new.html.erb
@@ -12,7 +12,7 @@
         <%= f.submit "パスワード再設定メールを送る", class:"btn btn-outline-primary" %>
       </div>
       <% end %>
-      <%= render "users/shared/links" %>
+      <%= render "public/users/shared/links" %>
     </div>
   </div>
 </div>
